--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-toggle": "^1.0.3",
     "@reduxjs/toolkit": "^1.9.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^8.1.3",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^9.0.4"
   },
   "devDependencies": {
